--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+.imgone {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.links {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fig {
+  text-align: center;
+  font-size: 15px;
+}
+a {
+  align-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+#featured-property p {
+  max-width: 800px;
+  margin: auto;
+  margin-top: 10px;
+  text-align: center;
+}
+#details {
+  background-color: red;
+  height: 120px;
+}
+#details div {
+  float: left;
+  padding-left: 100px;
+}
